syntax = "proto3";

message Genre {
   int32 genre_id = 1;
   string genre_name = 2;
   int32 song_count = 3;
   string genre_url = 4;
   string updated_on = 5;
}

message NewGenre {
    string genre_name = 1;
   int32 song_count = 2;
   string genre_url = 3;
   string updated_on = 4;
}

message Track {
    int32 track_id = 1;
    string title = 2;
    string mix = 3;
    bool is_remixed = 4;
    int32 release_id = 5;
    string release_date = 6;
    int32 genre_id = 7;
    int32 subgenre_id = 8;
    string track_url = 9;
    int32 bpm = 10;
    int32 duration = 11;
}

message GetGenresListResponse {
    repeated Genre genres = 1;
}

message AddGenreRequest {
    NewGenre genre = 1;
}

message AddGenreResponse {
    Genre genre = 1;
}

message GetGenreRequest {
    int32 genre_id = 1;
}

message GetGenreResponse {
    Genre genre = 1;
}

message DeleteGenreRequest {
    Genre genre = 1;
}

message DeleteGenreResponse {
    Genre genre = 1;
}

message UpdateGenreRequest {
    Genre genre = 1;
}

message UpdateGenreResponse {
    Genre genre = 1;
}

message GetGenreTrackRequest {
    Track track = 1;
}

message GetGenreTrackResponse {
    Track track = 1;
}

service GenreService {
    rpc GetGenresList(Empty) returns (GetGenresListResponse);
    rpc AddGenre(AddGenreRequest) returns (AddGenreResponse);
    rpc GetGenre(GetGenreRequest) returns (GetGenreResponse);
    rpc DeleteGenre(DeleteGenreRequest) returns (DeleteGenreResponse);
    rpc UpdateGenre(UpdateGenreRequest) returns (UpdateGenreResponse);
    rpc GetGenreTrack (GetGenreTrackRequest) returns (GetGenreTrackResponse);
}

message Empty {}